# aws-ec2-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ec2mgr/: aws.py  cli.py  config.py  formatting.py  logging_conf.py
src/ec2mgr/aws-ec2-manager/: .dockerignore  Dockerfile
tests/: test_aws_calls.py  test_cli_parsing.py
