[project]
name = "ec2mgr"
version = "0.1.0"
description = "EC2 Manager CLI (start/stop/list/tag/status) with tests + CI"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34.0"]

[project.scripts]
ec2mgr = "ec2mgr.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
